# portcullis

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/portcullis/: __init__.py
tests/: test_sanity.py
